# angular-bazel-example

./: .prettierrc  README.md  angular-metadata.tsconfig.json  angular.json  angular.json.bak  karma.conf.js  package.json
e2e/src/: app.e2e-spec.ts
src/: BUILD.bazel  index.html  styles.scss
src/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts
src/app/home/: BUILD.bazel  home.component.scss  home.module.ts
