load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "home-styles",
    src = "home.component.scss",
)

ng_module(
    name = "home",
    srcs = [
        "home.component.ts",
        "home.module.ts",
    ],
    assets = [
        "home.component.html",
        ":home-styles",
    ],
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/router",
    ],
)
